temp: Add initrd.img blob and handle it as a guest resource
These changes are needed for adding guest ramdisk and copying it
to the desired location.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Signed-off-by: Andrii Anisov <andrii_anisov@epam.com>
Reviewed-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/recipes-dom0/dom0-image-weston/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu.cfg
+++ b/recipes-dom0/dom0-image-weston/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu.cfg
@@ -21,6 +21,9 @@ kernel = "/boot/Image"
 #irqs=[ 151 ]
 #iomem=[ "0xfd000,40" ]
 
+# Ramdisk (optional)
+ramdisk = "/boot/initrd/initrd.img"
+
 # Kernel command line options
 extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu ip=192.168.1.11 rw rootwait console=hvc0 cma=64M"
 
