domd: Add M3N specific things
This patch adds:
- Device-trees for all domains
- Linux defconfig
- Script to play with the SATA

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Andrii Anisov <andrii_anisov@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-x-domu.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-x-domu.dts
@@ -1,5 +1,24 @@
-/*
-*  Dummy M3N .dts
-*  model = "Renesas Salvator-X board based on r8a77965";
-*  compatible = "renesas,salvator-x", "renesas,r8a77965";
-*/
+/dts-v1/;
+
+#include <dt-bindings/interrupt-controller/arm-gic.h>
+
+/ {
+	soc {
+		#address-cells = <2>;
+		#size-cells = <2>;
+
+		gsx: gsx@fd000000 {
+			compatible = "renesas,gsx";
+			reg = <0 0xfd000000 0 0x3ffff>;
+			interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
+			/*clocks = <&cpg CPG_MOD 112>;*/
+			/*operating-points-v2 = <&gsx_opp_table>;*/
+			/*power-domains = <&sysc R8A77965_PD_3DG_B>;*/
+		};
+	};
+
+	/* keep this to make XEN happy */
+	passthrough {
+	};
+};
+
