Fixup domain configs and script to use blk storage by default
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-m3n.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-m3n.cfg
@@ -13,8 +13,8 @@ kernel = "/xt/domd/Image"
 device_tree = "/xt/domd/domd.dtb"
 
 # Kernel command line options
-extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
-#extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
+extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
 
 # Initial memory allocation (MB)
 memory = 768
