--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-m3n.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-m3n.cfg
@@ -13,8 +13,8 @@ kernel = "/xt/domu/Image"
 device_tree = "/xt/domd/domu.dtb"
 
 # Kernel command line options
-extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
-#extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
+extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
 
 # Initial memory allocation (MB)
 memory = 768
@@ -35,6 +35,8 @@ iomem = [
 #gsx@fd000000
     "0xfd010,1@0xfd000",
  ]
+
+disk = [ 'backend=DomD,phy:/dev/STORAGE_PART3,xvda1' ]
 
 vgsx = [ 'backend=DomD,osid=1' ]
 
