--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-h3.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-h3.cfg
@@ -13,11 +13,13 @@ kernel = "/xt/domd/Image"
 device_tree = "/xt/domd/domd.dtb"
 
 # Kernel command line options
-#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd ip=192.168.1.11 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0"
-extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0"
+# Uncomment this when using nfs as a boot device
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
+# Uncomment this when using block device as a boot device
+extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
 
 # Initial memory allocation (MB)
-memory = 1024
+memory = 1536
 
 # Number of VCPUS
 vcpus = 4
@@ -33,6 +35,8 @@ dt_compatible = [ "renesas,salvator-x", "renesas,r8a7795" ]
 # Clocks and regulators are needed and are in the device tree root,
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
+    "/avs",
+    "/gsx_opp_table",
     "/extal",
     "/extalr",
     "/audio_clk_a",
@@ -60,6 +64,7 @@ dt_passthrough_nodes = [
     "/sound",
     "/vga-encoder",
     "/vga",
+    "/vspm_if",
     "/lvds-encoder",
     "/lvds",
     "/hdmi0-out",
@@ -73,9 +78,14 @@ dtdev = [
     "/soc/dma-controller@e7300000",
     "/soc/dma-controller@e7310000",
     "/soc/ethernet@e6800000",
+    "/soc/fdpm@fe940000",
+    "/soc/fdpm@fe944000",
+    "/soc/sata@ee300000",
     "/soc/usb@ee000000",
     "/soc/dma-controller@e65a0000",
     "/soc/dma-controller@e65b0000",
+    "/soc/dma-controller@e6460000",
+    "/soc/dma-controller@e6470000",
     "/soc/sd@ee100000",
     "/soc/sd@ee140000",
     "/soc/sd@ee160000",
@@ -85,6 +95,10 @@ dtdev = [
     "/soc/usb@ee080000",
     "/soc/usb@ee0a0000",
     "/soc/usb@ee0c0000",
+    "/soc/vspm@fe920000",
+    "/soc/vspm@fe960000",
+    "/soc/vspm@fe9a0000",
+    "/soc/vspm@fe9b0000",
     "/soc/fcp@fea27000",
     "/soc/fcp@fea2f000",
     "/soc/fcp@fea37000",
@@ -113,8 +127,10 @@ irqs = [
     352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366, 367, 382,
 # dma-controller@ec720000
     383, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377, 378, 379, 380, 381, 414, 415,
-# mfis@e6260000
+# mfis-as
     212,
+# interrupt-controller@e61c0000
+    32, 33, 34, 35, 193, 50,
 # dma-controller@e6700000
     231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247,
 # dma-controller@e7300000
@@ -129,6 +145,8 @@ irqs = [
     318,
 # i2c@e66d8000
     51,
+# i2c@e60b0000
+    205,
 # src-0
     384,
 # src-1
@@ -177,6 +195,10 @@ irqs = [
     272, 273,
 # vcp4@fe8d0000
     412, 413, 255,
+# fdpm@fe940000
+    294,
+# fdpm@fe944000
+    295,
 # video@e6ef0000
     220,
 # video@e6ef1000
@@ -197,8 +219,12 @@ irqs = [
     216,
 # csi2@feaa0000
     278,
+# sata@ee300000
+    137,
 # usb@ee000000
     134,
+# usb@ee020000
+    136,
 # dma-controller@e65a0000
     141,
 # dma-controller@e65b0000
@@ -225,6 +251,14 @@ irqs = [
     148, 149, 150,
 # pcie@ee800000
     180, 181, 182,
+# vspm@fe920000
+    497,
+# vspm@fe960000
+    298,
+# vspm@fe9a0000
+    476,
+# vspm@fe9b0000
+    477,
 # vsp@fea20000
     498,
 # vsp@fea28000
@@ -237,9 +271,13 @@ irqs = [
     421,
 # hdmi1@feae0000
     468,
+# thermal@0xe6198000
+    99, 100, 101,
 ]
 
 iomem = [
+#avs
+    "e60a0,1",
 #watchdog@e6020000
     "e6020,1",
 #gpio@e6050000
@@ -269,10 +307,11 @@ iomem = [
 #dma-controller@ec720000
     "ec720,10",
 #mfis@e6260000
-#mfis-lock
     "e6260,1",
 #pfc@e6060000
     "e6060,1",
+#interrupt-controller@e61c0000
+    "e61c0,1",
 #dma-controller@e6700000
     "e6700,10",
 #dma-controller@e7300000
@@ -293,6 +332,8 @@ iomem = [
     "e6510,1",
 #i2c@e66d8000
     "e66d8,1",
+#i2c@e60b0000
+    "e60b0,1",
 #sound@ec500000
     "ec500,1",
 #sound@ec500000
@@ -321,6 +362,14 @@ iomem = [
     "fe8d0,1",
 #vcp4@fe90f000
     "fe90f,1",
+#fdpm@fe940000
+    "fe940,3",
+#fdpm@fe940000
+    "fe950,1",
+#fdpm@fe944000
+    "fe944,3",
+#fdpm@fe944000
+    "fe951,1",
 #video@e6ef0000
     "e6ef0,1",
 #video@e6ef1000
@@ -341,8 +390,12 @@ iomem = [
     "fea80,10",
 #csi2@feaa0000
     "feaa0,10",
+#sata@ee300000
+    "ee300,2",
 #usb@ee000000
     "ee000,1",
+#usb@ee020000
+    "ee020,1",
 #dma-controller@e65a0000
     "e65a0,1",
 #dma-controller@e65b0000
@@ -375,6 +428,26 @@ iomem = [
     "fe000,80",
 #pcie@ee800000
     "ee800,80",
+#vsp@fe920000
+#vspm@fe920000
+    "fe920,8",
+#vspm@fe920000
+    "fe92f,1",
+#vsp@fe960000
+#vspm@fe960000
+    "fe960,8",
+#vspm@fe960000
+    "fe96f,1",
+#vsp@fe9a0000
+#vspm@fe9a0000
+    "fe9a0,8",
+#vspm@fe9a0000
+    "fe9af,1",
+#vsp@fe9b0000
+#vspm@fe9b0000
+    "fe9b0,8",
+#vspm@fe9b0000
+    "fe9bf,1",
 #vsp@fea20000
     "fea20,4",
 #fcp@fea27000
@@ -395,6 +468,12 @@ iomem = [
     "fead0,10",
 #hdmi1@feae0000
     "feae0,10",
+#thermal@0xe6198000
+    "e6198,1",
+#thermal@0xe61a0000
+    "e61a0,1",
+#thermal@0xe61a8000
+    "e61a8,1",
 ]
 
 # End of autogenerated config part
