domd(u)-salvator-x-m3n.cfg: Add comments clarifying root selection
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-m3n.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-m3n.cfg
@@ -13,7 +13,9 @@ kernel = "/xt/domu/Image"
 device_tree = "/xt/domd/domu.dtb"
 
 # Kernel command line options
+# Uncomment this when using nfs as a boot device
 #extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
+# Uncomment this when using block device as a boot device
 extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
 
 # Initial memory allocation (MB)
@@ -36,6 +38,7 @@ iomem = [
     "0xfd010,1@0xfd000",
  ]
 
+# Uncomment this when using block device as a boot device
 disk = [ 'backend=DomD,phy:/dev/STORAGE_PART3,xvda1' ]
 
 vgsx = [ 'backend=DomD,osid=1' ]
