--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-domd.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-domd.dts
@@ -42,8 +42,8 @@
 #define PHANDLE_GIC (65000)
 
 / {
-
 	aliases {
+		serial0 = &scif2;
 		serial1 = &scif1;
 		ethernet0 = &avb;
 	};
@@ -51,9 +51,6 @@
 	soc {
 		//this must point to Xen interrupt-parent
 		interrupt-parent = <PHANDLE_GIC>;
-
-		/* Thermal is not under Linux control */
-		/delete-node/thermal-zones;
 	};
 
 	passthrough {
@@ -273,7 +270,9 @@
 	};
 };
 
-/delete-node/&avs_sensor;
+&a57_0 {
+	cpu-supply = <&vdd_dvfs>;
+};
 
 &pwm1 {
 	pinctrl-0 = <&pwm1_pins>;
@@ -342,13 +341,13 @@
 	};
 
 	sdhi2_pins: sd2 {
-		groups = "sdhi2_data8", "sdhi2_ctrl";
+		groups = "sdhi2_data8", "sdhi2_ctrl", "sdhi2_ds";
 		function = "sdhi2";
 		power-source = <3300>;
 	};
 
 	sdhi2_pins_uhs: sd2_uhs {
-		groups = "sdhi2_data8", "sdhi2_ctrl";
+		groups = "sdhi2_data8", "sdhi2_ctrl", "sdhi2_ds";
 		function = "sdhi2";
 		power-source = <1800>;
 	};
@@ -390,7 +389,7 @@
 	};
 
 	sound_pins: sound {
-		groups = "ssi0129_ctrl", "ssi0_data", "ssi1_data_a";
+		groups = "ssi01239_ctrl", "ssi0_data", "ssi1_data_a";
 		function = "ssi";
 	};
 
@@ -418,6 +417,7 @@
 	phy-handle = <&phy0>;
 	status = "okay";
 	phy-gpios = <&gpio2 11 GPIO_ACTIVE_LOW>;
+	phy-reset-gpios = <&gpio2 10 GPIO_ACTIVE_LOW>;
 
 	phy0: ethernet-phy@0 {
 		rxc-skew-ps = <1500>;
@@ -453,26 +453,12 @@
 &du {
 	status = "okay";
 
-	/* add gsx domain if gsx is passthroughed */
-	power-domains = <&sysc R8A7796_PD_3DG_B>;
-
 	/* update <du_dotclkin0/2> to <programable_clk0/1> */
-	/* add gsx clk (3dge) if gsx is passthroughed */
 	clocks = <&cpg CPG_MOD 724>,
 		 <&cpg CPG_MOD 723>,
 		 <&cpg CPG_MOD 722>,
 		 <&cpg CPG_MOD 727>,
-		 <&programmable_clk0>, <&du_dotclkin1>, <&programmable_clk1>,
-		 <&cpg CPG_MOD 112>,
-		 <&cpg CPG_MOD 112>,
-		 <&cpg CPG_MOD 626>, <&cpg CPG_MOD 607>,
-		 <&cpg CPG_MOD 631>, <&cpg CPG_MOD 611>,
-		 <&cpg CPG_MOD 119>, <&cpg CPG_MOD 615>;
-	clock-names = "du.0", "du.1", "du.2", "lvds.0",
-				  "dclkin.0", "dclkin.1", "dclkin.2", "3dge",
-				  "vspb", "fcpvb",
-				  "vspi0", "fcpvi0",
-				  "fdp0", "fcpf0";
+		 <&programmable_clk0>, <&du_dotclkin1>, <&programmable_clk1>;
 
 	backlight-gpios = <&gpio6 7 GPIO_ACTIVE_HIGH>;
 
@@ -537,7 +523,6 @@
 	sd-uhs-sdr50;
 	sd-uhs-sdr104;
 	status = "okay";
-
 };
 
 &sdhi2 {
@@ -551,8 +536,8 @@
 	mmc-hs200-1_8v;
 	mmc-hs400-1_8v;
 	bus-width = <8>;
+	drive-strength = <1>;
 	non-removable;
-	power-domains = <&sysc R8A7796_PD_A3VC>;
 	status = "okay";
 };
 
@@ -700,7 +685,7 @@
 
 	/* audio_clkout0/1/2/3 */
 	#clock-cells = <1>;
-	clock-frequency = <11289600>;
+	clock-frequency = <12288000 11289600>;
 	clkout-lr-synchronous;
 
 	status = "okay";
@@ -740,12 +725,32 @@
 	clock-frequency = <22579200>;
 };
 
+&i2c_dvfs {
+	status = "okay";
+
+	clock-frequency = <400000>;
+
+	vdd_dvfs: regulator@30 {
+		compatible = "rohm,bd9571mwv";
+		reg = <0x30>;
+
+		regulator-min-microvolt = <750000>;
+		regulator-max-microvolt = <1030000>;
+		regulator-boot-on;
+		regulator-always-on;
+	};
+};
+
 &wdt0 {
 	timeout-sec = <60>;
 	status = "okay";
 };
 
 &xhci0 {
+	status = "okay";
+};
+
+&usb3_peri0 {
 	status = "okay";
 };
 
@@ -770,12 +775,10 @@
 
 &ehci0 {
 	status = "okay";
-
 };
 
 &ehci1 {
 	status = "okay";
-
 };
 
 &ohci0 {
@@ -784,6 +787,10 @@
 
 &ohci1 {
 	status = "okay";
+};
+
+&msiof_ref_clk {
+	clock-frequency = <133333333>;
 };
 
 &msiof0 {
@@ -932,22 +939,16 @@
 };
 
 &vspb {
-	status = "disabled";
+	status = "okay";
 };
 
 &vspi0 {
-	status = "disabled";
-};
-
-&fdp0 {
-	status = "disabled";
+	status = "okay";
 };
 
 &vin0 {
 	status = "okay";
 };
-
-/* ============================ Xen pass through section ============================ */
 
 &dmac0 {
 	/delete-property/iommus;
@@ -969,27 +970,11 @@
 	/delete-property/iommus;
 };
 
-&msiof_ref_clk {
-	clock-frequency = <133333333>;
-};
-
 /* Xen will provide its own GIC, mask ours */
 &gic {
 	compatible = "";
- };
+};
 
 &scif2 {
-	status = "disabled";
-};
-
-&tsc1 {
-	status = "disabled";
-};
-
-&tsc2 {
-	status = "disabled";
-};
-
-&tsc3 {
 	status = "disabled";
 };
