domd: device-tree: Don't use coproc feature to share GSX
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-x-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-x-dom0.dts
@@ -1093,7 +1093,7 @@
 };
 
 &gsx {
-	xen,coproc;
+	xen,passthrough;
 };
 
 /* ============================ Xen pass through section ============================ */
