--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-dom0.dts
@@ -1237,7 +1237,7 @@
 };
 
 &gsx {
-	xen,coproc;
+	xen,passthrough;
 };
 
 /* ============================ Xen pass through section ============================ */
