domu: Add gsx_domu dtdev node for Salvator X H3 ES3.0
Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3-4x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3-4x2g.cfg
@@ -12,6 +12,10 @@ kernel = "/xt/domu/Image"
 
 device_tree = "/xt/domd/domu.dtb"
 
+dtdev = [
+    "/soc/gsx_domu",
+]
+
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
 #extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu,vers=3 ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
