domd: Introduce device trees for Salvator-XS board
Introduce device trees for Salvator-XS board with different SIPs:
 - H3 ES2.0
 - H3 ES3.0 4x2G
 - H3 ES3.0 2x2G

Signed-off-by: Andrii Anisov <andrii_anisov@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-4x2g-domd.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-4x2g-domd.dts
@@ -1,5 +1,5 @@
 /*
- * Device Tree Source for the Salvator-X 2nd version board with R-Car H3 ES2.0
+ * Device Tree Source for the Salvator-X 2nd version board with R-Car H3 ES3.0
  * running XEN hypervisor
  *
  * Copyright (C) 2018 Renesas Electronics Corp.
@@ -67,6 +67,10 @@
 };
 
 &scif2 {
+	status = "disabled";
+};
+
+&sata {
 	status = "disabled";
 };
 
