--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-2x2g-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-2x2g-dom0.dts
@@ -12,38 +12,12 @@
 #include "r8a7795-salvator-xs-4x2g-dom0.dts"
 
 / {
-	model = "Renesas Salvator-XS board based on r8a7795 ES2.0+";
+	model = "Renesas Salvator-XS board based on r8a7795 ES3.0 2x2G";
 
 	memory@48000000 {
 		device_type = "memory";
 		/* first 128MB is reserved for secure area. */
-		reg = <0x0 0x48000000 0x0 0x38000000>,
-			  <0x5 0x00000000 0x0 0x40000000>,
-			  <0x6 0x00000000 0x0 0x40000000>,
-			  <0x7 0x00000000 0x0 0x40000000>;
+		reg = <0x0 0x48000000 0x0 0x78000000>,
+			  <0x5 0x00000000 0x0 0x80000000>,
 	};
-};
-
-/ {
-	soc {
-		/delete-node/gsx_domd;
-		/delete-node/gsx_domu;
-	};
-
-};
-
-&ipmmu_pv0 {
-	status = "disabled";
-};
-
-&ipmmu_pv1 {
-	status = "disabled";
-};
-
-&ipmmu_pv2 {
-	status = "disabled";
-};
-
-&ipmmu_pv3 {
-	status = "disabled";
 };
