Misc fixes to IPMMU related nodes
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Andrii Anisov <andrii_anisov@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-dom0.dts
@@ -330,11 +330,15 @@
 	iommus = <&ipmmu_hc 12>;
 };
 
-&usb_dmac0 {
+&usb3_peri0 {
+	iommus = <&ipmmu_hc 13>;
+};
+
+&usb_dmac2 {
 	iommus = <&ipmmu_hc 14>;
 };
 
-&usb_dmac1 {
+&usb_dmac3 {
 	iommus = <&ipmmu_hc 15>;
 };
 
