--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-domd.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-domd.dts
@@ -22,8 +22,28 @@
 		//this must point to Xen interrupt-parent
 		interrupt-parent = <PHANDLE_GIC>;
 
-		/* Thermal is not under Linux control */
+		/*
+		 * When creating DT for the guest domain Xen inserts only dummy CPU nodes.
+		 * And the number of these inserted CPU nodes is equal to the number of
+		 * vCPUs assigned to this domain. All CPU properties which original DT has,
+		 * such as OPP, clock, regulator, etc are not passed to the guest’s DT.
+		 *
+		 * Example of guest vCPU node:
+		 *
+		 * cpu@0 {
+		 *     device_type = "cpu";
+		 *     compatible = "arm,armv8";
+		 *     enable-method = "psci";
+		 *     reg = <0x0>;
+		 * };
+		 *
+		 * This results in the fact that all features expecting a57_x or a53_x
+		 * CPU nodes to be present get broken. This is why we have to explicitly
+		 * remove the following.
+		 */
 		/delete-node/thermal-zones;
+		/delete-node/pmu_a57;
+		/delete-node/pmu_a53;
 	};
 
 	passthrough {
@@ -35,12 +55,7 @@
 	/delete-node/mmngrbuf;
 };
 
-/delete-node/&avs;
 /delete-node/&adsp;
-
-&i2c_dvfs {
-	status = "disabled";
-};
 
 &dmac0 {
 	/delete-property/iommus;
@@ -68,8 +83,4 @@
 
 &scif2 {
 	status = "disabled";
-};
-
-&tsc {
-    status = "disabled";
 };
