dom0: Align guest addons with new linux-renesas codebabe
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-m3ulcb.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-m3ulcb.cfg
@@ -34,7 +34,14 @@ dt_compatible = [ "renesas,m3ulcb", "renesas,r8a7796" ]
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
     "/avs@e60a013c",
-    "/gsx_opp_table",
+    "/gsx_opp_table0",
+    "/gsx_opp_table1",
+    "/gsx_opp_table2",
+    "/gsx_opp_table3",
+    "/gsx_opp_table4",
+    "/gsx_opp_table5",
+    "/gsx_opp_table6",
+    "/gsx_opp_table7",
     "/extal",
     "/extalr",
     "/audio_clk_a",
