dom0: Replace id to unique-id for each guest config where required
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-h3ulcb.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-h3ulcb.cfg
@@ -38,6 +38,6 @@ vif = [ 'backend=DomD,bridge=xenbr0,mac=08:00:27:ff:cb:ce' ]
 
 vdispl = [ 'backend=DomD,be-alloc=0,connectors=1000:1024x768' ]
 
-vkb = [ 'backend=DomD,backend-type=linux,multi-touch-width=1024,multi-touch-height=768,multi-touch-num-contacts=10,id=T:1000' ]
+vkb = [ 'backend=DomD,backend-type=linux,multi-touch-width=1024,multi-touch-height=768,multi-touch-num-contacts=10,unique-id=T:1000' ]
 
 on_crash = 'preserve'
