--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-domu.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-domu.dts
@@ -16,6 +16,7 @@
 		gsx: gsx@fd000000 {
 			compatible = "renesas,gsx";
 			reg = <0 0xfd000000 0 0x3ffff>;
+			interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
 		};
 	};
 };
