dom0/config: Force system CMA allocation from 0x40000000-0x80000000 region
Only for Salvator-X(XS) with H3 ES3.0 for now.

This hack is needed to retain 1G memory block (IPA: 0x40000000-0x80000000)
in stage-2 page table from being shattering due to mapping foreign pages.
All foreign pages will be mapped into specific static pools (both pages and CMA)
which are always located above first 1G memory block if domain memory
is not less than 1G + size of these pools (which is 128 MB + 64 MB by default)
since the allocation direction for them is top-bottom.

Also reduce system CMA size to 256 MB since previous size (384 MB) became not
actual right after enabling specific static pools.

With this patch applied we have the following:

1. DomD
[    0.000000] Allocated 67108864 bytes for Xen page allocator at 0x88000000
[    0.000000] Allocated 134217728 bytes for Xen CMA allocator at 0x80000000
[    0.000000] cma: Reserved 256 MiB at 0x0000000070000000

2. DomU
[    0.000000] Allocated 67108864 bytes for Xen page allocator at 0xbc000000
[    0.000000] Allocated 134217728 bytes for Xen CMA allocator at 0xb4000000
[    0.000000] cma: Reserved 256 MiB at 0x0000000070000000

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3-4x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3-4x2g.cfg
@@ -18,9 +18,9 @@ dtdev = [
 
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
-#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu,vers=3 ip=dhcp rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu,vers=3 ip=dhcp rw rootwait console=hvc0 cma=256M@1-2G pvrsrvkm.DriverMode=1"
 # Uncomment this when using block device as a boot device
-extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=384M pvrsrvkm.DriverMode=1"
+extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=256M@1-2G pvrsrvkm.DriverMode=1"
 
 # Initial memory allocation (MB)
 memory = 2048
