-dom0.dts: Extract XEN chosen node
Extract a common XEN chosen device tree node to an include file,
so that its changes will be done in one place for different setups.

Signed-off-by: Andrii Anisov <andrii_anisov@epam.com>
[Port from prod-devel and adopt for r8a77965 SoC]
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-dom0.dts
@@ -11,28 +11,11 @@
  */
 
 #include "r8a7796-m3ulcb.dts"
+#include "xen-chosen.dtsi"
 
 / {
 	model = "Renesas M3ULCB board based on r8a7796, running XEN hypervisor";
 	compatible = "renesas,m3ulcb", "renesas,r8a7796";
-
-	chosen {
-		bootargs = "dom0_mem=256M console=dtuart dtuart=serial0 dom0_max_vcpus=4 bootscrub=0 loglvl=all cpufreq=none sched=credit2 sched_ratelimit_us=100";
-		xen,dom0-bootargs = "console=hvc0 ignore_loglevel";
-		/delete-property/stdout-path;
-		modules {
-			#address-cells = <2>;
-			#size-cells = <2>;
-			module@1 {
-				compatible = "xen,linux-zimage", "xen,multiboot-module";
-				reg = <0x0 0x7a000000 0x0 0x02000000>;
-			};
-			module@2 {
-				compatible = "xen,xsm-policy", "xen,multiboot-module";
-				reg = <0x0 0x7c000000 0x0 0x10000>;
-			};
-		};
-	};
 
 	memory@48000000 {
 		device_type = "memory";
