--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-h3ulcb-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-h3ulcb-dom0.dts
@@ -11,28 +11,11 @@
  */
 
 #include "r8a7795-h3ulcb.dts"
+#include "xen-chosen.dtsi"
 
 / {
 	model = "Renesas H3ULCB board based on r8a7795 ES2.0+, running XEN hypervisor";
 	compatible = "renesas,h3ulcb", "renesas,r8a7795";
-
-	chosen {
-		bootargs = "dom0_mem=256M console=dtuart dtuart=serial0 dom0_max_vcpus=4 bootscrub=0 loglvl=all cpufreq=none sched=credit2 sched_ratelimit_us=100";
-		xen,dom0-bootargs = "console=hvc0 ignore_loglevel";
-		/delete-property/stdout-path;
-		modules {
-			#address-cells = <2>;
-			#size-cells = <2>;
-			module@1 {
-				compatible = "xen,linux-zimage", "xen,multiboot-module";
-				reg = <0x0 0x7a000000 0x0 0x02000000>;
-			};
-			module@2 {
-				compatible = "xen,xsm-policy", "xen,multiboot-module";
-				reg = <0x0 0x7c000000 0x0 0x10000>;
-			};
-		};
-	};
 
 	memory@48000000 {
 		device_type = "memory";
