--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-xs-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-xs-dom0.dts
@@ -10,27 +10,15 @@
  */
 
 #include "r8a77965-salvator-xs.dts"
+#include "xen-chosen.dtsi"
 
 / {
 	model = "Renesas Salvator-X 2nd version board based on r8a77965, running XEN hypervisor";
 	compatible = "renesas,salvator-xs", "renesas,r8a77965";
 
 	chosen {
+		/* Override bootargs since default "dom0_max_vcpus=4" is not appropriate for r8a77965 SoC */
 		bootargs = "dom0_mem=256M console=dtuart dtuart=serial0 dom0_max_vcpus=2 bootscrub=0 flask_enforcing=1 loglvl=all cpufreq=none sched=credit2 sched_ratelimit_us=100";
-		xen,dom0-bootargs = "console=hvc0 ignore_loglevel";
-		/delete-property/stdout-path;
-		modules {
-			#address-cells = <2>;
-			#size-cells = <2>;
-			module@1 {
-				compatible = "xen,linux-zimage", "xen,multiboot-module";
-				reg = <0x0 0x7a000000 0x0 0x02000000>;
-			};
-			module@2 {
-				compatible = "xen,xsm-policy", "xen,multiboot-module";
-				reg = <0x0 0x7c000000 0x0 0x10000>;
-			};
-		};
 	};
 
 	/delete-node/reserved-memory;
